--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <span style="margin: 10px;"><a href="linkedin.com"><img src="images/ig.png"width="30px" height="30px"></a></span>
            <span style="margin: 10px;"><a href="linkedin.com"><img src="images/fb.png"width="30px" height="30px"></a></span>
            <span style="margin: 10px;"><a href="linkedin.com"><img src="images/twiter.png"width="30px" height="30px"></a></span>
-            <div style="margin-right:70px;background-color: white; border-radius: 20px; text-align: center;">
+            <div style="margin-right:70px;background-color: white; border-radius: 20px; text-align: center;box-shadow: 0px 0px 20px black;">
 
                 <img style="border-radius:20px 20px 0 0"src="images/bill-gates.jpg" width="100%" height="350px">
                 <h2 >Bill Gates</h2>
