--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             background-color: white;
              border-radius: 20px;
               text-align: center;
-              box-shadow: 0px 0px 20px black;">
+              box-shadow: 0px 0px 20px black;
+              padding-bottom: 5px;
+              margin-top: 20px;">
 
-                <img style="border-radius:20px 20px 0 0"src="images/bill-gates.jpg" width="100%" height="350px">
-                <h2 >Bill Gates</h2>
-                <h3 >Full Stack Developer</h3>
+                <img style="border-radius:20px 20px 0 0"src="images/myprofil.jpeg" width="100%" height="350px">
+                <h2 >Rizal Mantopani</h2>
+                <h3 style="margin-top :-15px;">Full Stack Developer</h3>
 
         
             </div>
